--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -4,33 +4,35 @@
 <head>
 	<title>SSG yes</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1702577295032" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1702577295032"> <script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID6/':{title:'SSG yes'}}"></script>
-	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1702577295032">
-	<style data-component="YesSSGPage"></style>
-	<style data-component="Nav"></style>
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1702821708776" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1702821708776">
+	<style data-style="l-yesssgpage"></style>
+	<style data-style="l-nav"></style>
+	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1702821708776">
 </head>
 
-<body data-component="YesSSGPage" data-id="/UID6/">
-	<nav data-component="Nav" data-id="nav">
-		<ul>
-			<li> <a href="/404.html">Go error404</a> </li>
-			<li> <a href="https://example.com/" rel="noopener" target="_blank">Go external</a> </li>
-			<li> <a href="/">Go home</a> </li>
-			<li> <a href="/#jump1">Go homeJump1</a> </li>
-			<li> <a href="/#jump2">Go homeJump2</a> </li>
-			<li> <a href="/ssg/no/">Go ssgNo</a> </li>
-			<li> <a href="/ssg/yes/">Go ssgYes</a> </li>
-			<li> <a href="/ssg/yes/#jump1">Go ssgYesJump1</a> </li>
-			<li> <a href="/ssg/yes/#jump2">Go ssgYesJump2</a> </li>
-			<li> <button onclick="this.closest(`[data-component='Nav']`).instance.openModal(event,)" type="button">Modal</button> </li>
-		</ul>
-	</nav>
-	<main>
-		<h1>SSG yes</h1>
-		<div id="jump1">Jump 1</div>
-		<div id="jump2">Jump 2</div>
-	</main>
+<body>
+	<div id="UID8_" is="l-yesssgpage">
+		<nav id="nav" is="l-nav">
+			<ul>
+				<li> <a href="/404.html">Go error404</a> </li>
+				<li> <a href="https://example.com/">Go external</a> </li>
+				<li> <a href="/">Go home</a> </li>
+				<li> <a href="/#jump1">Go homeJump1</a> </li>
+				<li> <a href="/#jump2">Go homeJump2</a> </li>
+				<li> <a href="/ssg/no/">Go ssgNo</a> </li>
+				<li> <a href="/ssg/yes/">Go ssgYes</a> </li>
+				<li> <a href="/ssg/yes/#jump1">Go ssgYesJump1</a> </li>
+				<li> <a href="/ssg/yes/#jump2">Go ssgYesJump2</a> </li>
+				<li> <button onclick="this.closest(`[is='l-nav']`).instance.openModal(event,)" type="button">Modal</button> </li>
+			</ul>
+		</nav>
+		<main>
+			<h1>SSG yes</h1>
+			<div id="jump1">Jump 1</div>
+			<div id="jump2">Jump 2</div>
+		</main>
+	</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={UID8_:{title:'SSG yes'}}"></script>
 </body>
 
 </html>
