--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -4,73 +4,75 @@
 <head>
 	<title>Home page</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1702577295032" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1702577295032"> <script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={'/UID4/':{message:'This is a variable',title:'Home page'},mylist:[{value:'hello'}],'mylist-0':'hello','mylist-0_0':{maxlength:10,value:'hello'}}"></script>
-	<link rel="stylesheet" href="/index.html.css?cache=1702577295032">
-	<style data-component="Textbox"></style>
-	<style data-component="ListItem"></style>
-	<style data-component="List"></style>
-	<style data-component="TransitionTest"></style>
-	<style data-component="IndexPage"></style>
-	<style data-component="Nav"></style>
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1702821708776" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1702821708776">
+	<style data-style="l-textbox"></style>
+	<style data-style="l-listitem"></style>
+	<style data-style="l-list"></style>
+	<style data-style="l-transitiontest"></style>
+	<style data-style="l-indexpage"></style>
+	<style data-style="l-nav"></style>
+	<link rel="stylesheet" href="/index.html.css?cache=1702821708776">
 </head>
 
-<body data-component="IndexPage" data-id="/UID4/">
-	<nav data-component="Nav" data-id="nav">
-		<ul>
-			<li> <a href="/404.html">Go error404</a> </li>
-			<li> <a href="https://example.com/" rel="noopener" target="_blank">Go external</a> </li>
-			<li> <a href="/">Go home</a> </li>
-			<li> <a href="/#jump1">Go homeJump1</a> </li>
-			<li> <a href="/#jump2">Go homeJump2</a> </li>
-			<li> <a href="/ssg/no/">Go ssgNo</a> </li>
-			<li> <a href="/ssg/yes/">Go ssgYes</a> </li>
-			<li> <a href="/ssg/yes/#jump1">Go ssgYesJump1</a> </li>
-			<li> <a href="/ssg/yes/#jump2">Go ssgYesJump2</a> </li>
-			<li> <button onclick="this.closest(`[data-component='Nav']`).instance.openModal(event,)" type="button">Modal</button> </li>
-		</ul>
-	</nav>
-	<main>
-		<h1>Hello world!</h1>
-		<div data-component="TransitionTest" data-id="/UID4/_0"></div>
-		<div id="jump1">Jump 1</div>
-		<ol data-component="List" data-id="mylist">
-			<li>
-				<div data-component="ListItem" data-id="mylist-0"> mylist-0 <button type="button">↑</button> <button type="button">↓</button> <button type="button">Add before</button> <button type="button">Remove</button>
-					<div data-component="Textbox" data-id="mylist-0_0"> <input maxlength="10" oninput="this.closest(`[data-component='Textbox']`).instance.handleInput(event,)" placeholder="Type here" type="text" value="hello"> <span>5 / 10 Remaining</span> </div>
-				</div>
-			</li>
-		</ol>
-		<h1>Headline 1</h1>
-		<h2>This is a variable</h2>
-		<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
-		<p>Duis aute voluptate <a href="https://example.com" rel="noopener" target="_blank">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
-		<p><a href="/ssg/yes/">Link to SSG Yes</a></p><button type="button" onclick="this.closest(`[data-component='IndexPage']`).instance.anchorlessRoute(event,)">Go to SSG Yes</button>
-		<h2>Headline 2</h2>
-		<blockquote>
-			<p>Excepteur sint occaecat <em>cupidatat</em> non proident.</p>
-		</blockquote>
-		<p>Joseph's coat was red and yellow and green and brown and scarlet.</p>
-		<ul>
-			<li> ut aliquip ex</li>
-			<li> ea commodo consequat.<ul>
-					<li> Duis aute</li>
-					<li> irure dolor in</li>
-				</ul>
-			</li>
-			<li> ut aliquip ex</li>
-		</ul>
-		<ol>
-			<li> ut aliquip ex</li>
-			<li> ea commodo consequat.<ol>
-					<li> Duis aute</li>
-					<li> irure dolor in</li>
-				</ol>
-			</li>
-			<li> ut aliquip ex</li>
-		</ol>
-		<div id="jump2">Jump 2</div>
-	</main>
+<body>
+	<div id="UID4_" is="l-indexpage">
+		<nav id="nav" is="l-nav">
+			<ul>
+				<li> <a href="/404.html">Go error404</a> </li>
+				<li> <a href="https://example.com/">Go external</a> </li>
+				<li> <a href="/">Go home</a> </li>
+				<li> <a href="/#jump1">Go homeJump1</a> </li>
+				<li> <a href="/#jump2">Go homeJump2</a> </li>
+				<li> <a href="/ssg/no/">Go ssgNo</a> </li>
+				<li> <a href="/ssg/yes/">Go ssgYes</a> </li>
+				<li> <a href="/ssg/yes/#jump1">Go ssgYesJump1</a> </li>
+				<li> <a href="/ssg/yes/#jump2">Go ssgYesJump2</a> </li>
+				<li> <button onclick="this.closest(`[is='l-nav']`).instance.openModal(event,)" type="button">Modal</button> </li>
+			</ul>
+		</nav>
+		<main>
+			<h1>Hello world!</h1>
+			<div id="UID5_" is="l-transitiontest"></div>
+			<div id="jump1">Jump 1</div>
+			<ol id="mylist" is="l-list">
+				<li>
+					<div id="mylist-0" is="l-listitem"> mylist-0 <button type="button">↑</button> <button type="button">↓</button> <button type="button">Add before</button> <button type="button">Remove</button>
+						<div id="UID6_" is="l-textbox"> <input maxlength="10" oninput="this.closest(`[is='l-textbox']`).instance.handleInput(event,)" placeholder="Type here" type="text" value="hello"> <span>5 / 10 Remaining</span> </div>
+					</div>
+				</li>
+			</ol>
+			<h1>Headline 1</h1>
+			<h2>This is a variable</h2>
+			<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
+			<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
+			<p><a href="/ssg/yes/">Link to SSG Yes</a></p><button type="button" onclick="this.closest(`[is='l-indexpage']`).instance.anchorlessRoute(event,)">Go to SSG Yes</button>
+			<h2>Headline 2</h2>
+			<blockquote>
+				<p>Excepteur sint occaecat <em>cupidatat</em> non proident.</p>
+			</blockquote>
+			<p>Joseph's coat was red and yellow and green and brown and scarlet.</p>
+			<ul>
+				<li> ut aliquip ex</li>
+				<li> ea commodo consequat.<ul>
+						<li> Duis aute</li>
+						<li> irure dolor in</li>
+					</ul>
+				</li>
+				<li> ut aliquip ex</li>
+			</ul>
+			<ol>
+				<li> ut aliquip ex</li>
+				<li> ea commodo consequat.<ol>
+						<li> Duis aute</li>
+						<li> irure dolor in</li>
+					</ol>
+				</li>
+				<li> ut aliquip ex</li>
+			</ol>
+			<div id="jump2">Jump 2</div>
+		</main>
+	</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={mylist:[{value:'hello'}],'mylist-0':'hello',UID6_:{maxlength:10,value:'hello'},UID4_:{message:'This is a variable',title:'Home page'}}"></script>
 </body>
 
 </html>
