--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -4,28 +4,29 @@
 <head>
 	<title>Error 404</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1702821708776" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1702821708776">
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1702829876580" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1702829876580">
+	<style data-style="l-link"></style>
 	<style data-style="l-modalcontainer"></style>
 	<style data-style="l-progressmodal"></style>
 	<style data-style="l-nav"></style>
 	<style data-style="l-errorpage"></style>
-	<link rel="stylesheet" href="/404.html.css?cache=1702821708776">
+	<link rel="stylesheet" href="/404.html.css?cache=1702829876580">
 </head>
 
 <body>
 	<div id="UID3_" is="l-errorpage">
 		<nav id="nav" is="l-nav">
 			<ul>
-				<li> <a href="/404.html">Go error404</a> </li>
-				<li> <a href="https://example.com/">Go external</a> </li>
-				<li> <a href="/">Go home</a> </li>
-				<li> <a href="/#jump1">Go homeJump1</a> </li>
-				<li> <a href="/#jump2">Go homeJump2</a> </li>
-				<li> <a href="/ssg/no/">Go ssgNo</a> </li>
-				<li> <a href="/ssg/yes/">Go ssgYes</a> </li>
-				<li> <a href="/ssg/yes/#jump1">Go ssgYesJump1</a> </li>
-				<li> <a href="/ssg/yes/#jump2">Go ssgYesJump2</a> </li>
+				<li><a href="/404.html" id="UID4_" is="l-link">Go error404</a></li>
+				<li><a href="https://example.com/" rel="noopener" target="_blank" id="UID5_" is="l-link">Go external</a></li>
+				<li><a href="/" id="UID6_" is="l-link">Go home</a></li>
+				<li><a href="/#jump1" id="UID7_" is="l-link">Go homeJump1</a></li>
+				<li><a href="/#jump2" id="UID8_" is="l-link">Go homeJump2</a></li>
+				<li><a href="/ssg/no/" id="UID9_" is="l-link">Go ssgNo</a></li>
+				<li><a href="/ssg/yes/" id="UID10_" is="l-link">Go ssgYes</a></li>
+				<li><a href="/ssg/yes/#jump1" id="UID11_" is="l-link">Go ssgYesJump1</a></li>
+				<li><a href="/ssg/yes/#jump2" id="UID12_" is="l-link">Go ssgYesJump2</a></li>
 				<li> <button onclick="this.closest(`[is='l-nav']`).instance.openModal(event,)" type="button">Modal</button> </li>
 			</ul>
 		</nav>
