--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -4,26 +4,27 @@
 <head>
 	<title>SSG yes</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1702821708776" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1702821708776">
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1702829876580" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1702829876580">
 	<style data-style="l-yesssgpage"></style>
 	<style data-style="l-nav"></style>
-	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1702821708776">
+	<style data-style="l-link"></style>
+	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1702829876580">
 </head>
 
 <body>
-	<div id="UID8_" is="l-yesssgpage">
+	<div id="UID27_" is="l-yesssgpage">
 		<nav id="nav" is="l-nav">
 			<ul>
-				<li> <a href="/404.html">Go error404</a> </li>
-				<li> <a href="https://example.com/">Go external</a> </li>
-				<li> <a href="/">Go home</a> </li>
-				<li> <a href="/#jump1">Go homeJump1</a> </li>
-				<li> <a href="/#jump2">Go homeJump2</a> </li>
-				<li> <a href="/ssg/no/">Go ssgNo</a> </li>
-				<li> <a href="/ssg/yes/">Go ssgYes</a> </li>
-				<li> <a href="/ssg/yes/#jump1">Go ssgYesJump1</a> </li>
-				<li> <a href="/ssg/yes/#jump2">Go ssgYesJump2</a> </li>
+				<li><a href="/404.html" id="UID28_" is="l-link">Go error404</a></li>
+				<li><a href="https://example.com/" rel="noopener" target="_blank" id="UID29_" is="l-link">Go external</a></li>
+				<li><a href="/" id="UID30_" is="l-link">Go home</a></li>
+				<li><a href="/#jump1" id="UID31_" is="l-link">Go homeJump1</a></li>
+				<li><a href="/#jump2" id="UID32_" is="l-link">Go homeJump2</a></li>
+				<li><a href="/ssg/no/" id="UID33_" is="l-link">Go ssgNo</a></li>
+				<li><a href="/ssg/yes/" id="UID34_" is="l-link">Go ssgYes</a></li>
+				<li><a href="/ssg/yes/#jump1" id="UID35_" is="l-link">Go ssgYesJump1</a></li>
+				<li><a href="/ssg/yes/#jump2" id="UID36_" is="l-link">Go ssgYesJump2</a></li>
 				<li> <button onclick="this.closest(`[is='l-nav']`).instance.openModal(event,)" type="button">Modal</button> </li>
 			</ul>
 		</nav>
@@ -32,7 +33,7 @@
 			<div id="jump1">Jump 1</div>
 			<div id="jump2">Jump 2</div>
 		</main>
-	</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={UID8_:{title:'SSG yes'}}"></script>
+	</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={UID27_:{title:'SSG yes'}}"></script>
 </body>
 
 </html>
