Fix some build issues and change put to get

--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -4,27 +4,28 @@
 <head>
 	<title>SSG yes</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1702829876580" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1702829876580">
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1702876511072" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1702876511072">
 	<style data-style="l-yesssgpage"></style>
 	<style data-style="l-nav"></style>
 	<style data-style="l-link"></style>
-	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1702829876580">
+	<style data-style="l-modalcontainer"></style>
+	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1702876511072">
 </head>
 
 <body>
-	<div id="UID27_" is="l-yesssgpage">
+	<div id="UID26_" is="l-yesssgpage">
 		<nav id="nav" is="l-nav">
 			<ul>
-				<li><a href="/404.html" id="UID28_" is="l-link">Go error404</a></li>
-				<li><a href="https://example.com/" rel="noopener" target="_blank" id="UID29_" is="l-link">Go external</a></li>
-				<li><a href="/" id="UID30_" is="l-link">Go home</a></li>
-				<li><a href="/#jump1" id="UID31_" is="l-link">Go homeJump1</a></li>
-				<li><a href="/#jump2" id="UID32_" is="l-link">Go homeJump2</a></li>
-				<li><a href="/ssg/no/" id="UID33_" is="l-link">Go ssgNo</a></li>
-				<li><a href="/ssg/yes/" id="UID34_" is="l-link">Go ssgYes</a></li>
-				<li><a href="/ssg/yes/#jump1" id="UID35_" is="l-link">Go ssgYesJump1</a></li>
-				<li><a href="/ssg/yes/#jump2" id="UID36_" is="l-link">Go ssgYesJump2</a></li>
+				<li><a href="/404.html" id="UID27_" is="l-link">Go error404</a></li>
+				<li><a href="https://example.com/" rel="noopener" target="_blank" id="UID28_" is="l-link">Go external</a></li>
+				<li><a href="/" id="UID29_" is="l-link">Go home</a></li>
+				<li><a href="/#jump1" id="UID30_" is="l-link">Go homeJump1</a></li>
+				<li><a href="/#jump2" id="UID31_" is="l-link">Go homeJump2</a></li>
+				<li><a href="/ssg/no/" id="UID32_" is="l-link">Go ssgNo</a></li>
+				<li><a href="/ssg/yes/" id="UID33_" is="l-link">Go ssgYes</a></li>
+				<li><a href="/ssg/yes/#jump1" id="UID34_" is="l-link">Go ssgYesJump1</a></li>
+				<li><a href="/ssg/yes/#jump2" id="UID35_" is="l-link">Go ssgYesJump2</a></li>
 				<li> <button onclick="this.closest(`[is='l-nav']`).instance.openModal(event,)" type="button">Modal</button> </li>
 			</ul>
 		</nav>
@@ -33,7 +34,8 @@
 			<div id="jump1">Jump 1</div>
 			<div id="jump2">Jump 2</div>
 		</main>
-	</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={UID27_:{title:'SSG yes'}}"></script>
+		<div id="modals" is="l-modalcontainer"></div>
+	</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={UID26_:{title:'SSG yes'}}"></script>
 </body>
 
 </html>
