--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -4,8 +4,8 @@
 <head>
 	<title>Home page</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1702876511072" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1702876511072">
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1703105435848" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1703105435848">
 	<style data-style="l-textbox"></style>
 	<style data-style="l-listitem"></style>
 	<style data-style="l-list"></style>
@@ -14,7 +14,7 @@
 	<style data-style="l-link"></style>
 	<style data-style="l-nav"></style>
 	<style data-style="l-modalcontainer"></style>
-	<link rel="stylesheet" href="/index.html.css?cache=1702876511072">
+	<link rel="stylesheet" href="/index.html.css?cache=1703105435848">
 </head>
 
 <body>
@@ -75,7 +75,7 @@
 			<div id="jump2">Jump 2</div>
 		</main>
 		<div id="modals" is="l-modalcontainer"></div>
-	</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={mylist:[{value:'hello'}],'mylist-0':'hello',UID14_:{maxlength:10,value:'hello'},UID12_:{message:'This is a variable',title:'Home page'}}"></script>
+	</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={UID12_:{message:'This is a variable',title:'Home page'},mylist:[{value:'hello'}],'mylist-0':'hello',UID14_:{maxlength:10,value:'hello'}}"></script>
 </body>
 
 </html>
