Make specs work

--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -4,38 +4,33 @@
 <head>
 	<title>Error 404</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1702876511072" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1702876511072">
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1703610557542" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1703610557542"> <script type="module">import { ErrorPage } from '/error-37U5SFKZ.js';ErrorPage.init();</script>
+	<style data-style="l-modalcontainer"></style>
 	<style data-style="l-link"></style>
-	<style data-style="l-progresscircle"></style>
-	<style data-style="l-progressmodal"></style>
 	<style data-style="l-nav"></style>
 	<style data-style="l-errorpage"></style>
-	<style data-style="l-modalcontainer"></style>
-	<link rel="stylesheet" href="/404.html.css?cache=1702876511072">
+	<link rel="stylesheet" href="/?cache=1703610557542">
 </head>
 
 <body>
-	<div id="UID1_" is="l-errorpage">
-		<nav id="nav" is="l-nav">
+	<main data-page-title="Error 404" id="UID1_" is="l-errorpage">
+		<nav id="UID2_" is="l-nav">
 			<ul>
-				<li><a href="/404.html" id="UID2_" is="l-link">Go error404</a></li>
-				<li><a href="https://example.com/" rel="noopener" target="_blank" id="UID3_" is="l-link">Go external</a></li>
-				<li><a href="/" id="UID4_" is="l-link">Go home</a></li>
-				<li><a href="/#jump1" id="UID5_" is="l-link">Go homeJump1</a></li>
-				<li><a href="/#jump2" id="UID6_" is="l-link">Go homeJump2</a></li>
-				<li><a href="/ssg/no/" id="UID7_" is="l-link">Go ssgNo</a></li>
-				<li><a href="/ssg/yes/" id="UID8_" is="l-link">Go ssgYes</a></li>
-				<li><a href="/ssg/yes/#jump1" id="UID9_" is="l-link">Go ssgYesJump1</a></li>
-				<li><a href="/ssg/yes/#jump2" id="UID10_" is="l-link">Go ssgYesJump2</a></li>
-				<li> <button onclick="this.closest(`[is='l-nav']`).instance.openModal(event,)" type="button">Modal</button> </li>
+				<li><a data-route-name="error404" href="/404.html" id="UID3_" is="l-link">Go error404</a></li>
+				<li><a data-route-name="external" href="https://example.com/" rel="noopener" target="_blank" id="UID4_" is="l-link">Go external</a></li>
+				<li><a data-route-name="home" href="/" id="UID5_" is="l-link">Go home</a></li>
+				<li><a data-route-name="homeJump1" href="/#jump1" id="UID6_" is="l-link">Go homeJump1</a></li>
+				<li><a data-route-name="homeJump2" href="/#jump2" id="UID7_" is="l-link">Go homeJump2</a></li>
+				<li><a data-route-name="ssgNo" href="/ssg/no/" id="UID8_" is="l-link">Go ssgNo</a></li>
+				<li><a data-route-name="ssgYes" href="/ssg/yes/" id="UID9_" is="l-link">Go ssgYes</a></li>
+				<li><a data-route-name="ssgYesJump1" href="/ssg/yes/#jump1" id="UID10_" is="l-link">Go ssgYesJump1</a></li>
+				<li><a data-route-name="ssgYesJump2" href="/ssg/yes/#jump2" id="UID11_" is="l-link">Go ssgYesJump2</a></li>
 			</ul>
 		</nav>
-		<main>
-			<h1>404 page :(</h1>
-		</main>
-		<div id="modals" is="l-modalcontainer"></div>
-	</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={UID1_:{title:'Error 404'}}"></script>
+		<h1>404 page :(</h1>
+		<div data-duration="0.2" id="UID12_" is="l-modalcontainer" data-transition-state="inactive"></div>
+	</main>
 </body>
 
 </html>
