--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -4,78 +4,72 @@
 <head>
 	<title>Home page</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1703105435848" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1703105435848">
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1703610557542" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1703610557542"> <script type="module">import { IndexPage } from '/pages-M2RCDEZ6.js';IndexPage.init();</script>
 	<style data-style="l-textbox"></style>
 	<style data-style="l-listitem"></style>
 	<style data-style="l-list"></style>
+	<style data-style="l-progresscircle"></style>
+	<style data-style="l-progressmodal"></style>
 	<style data-style="l-transitiontest"></style>
 	<style data-style="l-indexpage"></style>
-	<style data-style="l-link"></style>
-	<style data-style="l-nav"></style>
-	<style data-style="l-modalcontainer"></style>
-	<link rel="stylesheet" href="/index.html.css?cache=1703105435848">
+	<link rel="stylesheet" href="/index.html.css?cache=1703610557542">
 </head>
 
 <body>
-	<div id="UID12_" is="l-indexpage">
-		<nav id="nav" is="l-nav">
+	<main data-message="This is a variable" data-page-title="Home page" id="UID13_" is="l-indexpage">
+		<nav id="UID19_" is="l-nav">
 			<ul>
-				<li><a href="/404.html" id="UID16_" is="l-link">Go error404</a></li>
-				<li><a href="https://example.com/" rel="noopener" target="_blank" id="UID17_" is="l-link">Go external</a></li>
-				<li><a href="/" id="UID18_" is="l-link">Go home</a></li>
-				<li><a href="/#jump1" id="UID19_" is="l-link">Go homeJump1</a></li>
-				<li><a href="/#jump2" id="UID20_" is="l-link">Go homeJump2</a></li>
-				<li><a href="/ssg/no/" id="UID21_" is="l-link">Go ssgNo</a></li>
-				<li><a href="/ssg/yes/" id="UID22_" is="l-link">Go ssgYes</a></li>
-				<li><a href="/ssg/yes/#jump1" id="UID23_" is="l-link">Go ssgYesJump1</a></li>
-				<li><a href="/ssg/yes/#jump2" id="UID24_" is="l-link">Go ssgYesJump2</a></li>
-				<li> <button onclick="this.closest(`[is='l-nav']`).instance.openModal(event,)" type="button">Modal</button> </li>
+				<li><a data-route-name="error404" href="/404.html" id="UID20_" is="l-link">Go error404</a></li>
+				<li><a data-route-name="external" href="https://example.com/" rel="noopener" target="_blank" id="UID21_" is="l-link">Go external</a></li>
+				<li><a data-route-name="home" href="/" id="UID22_" is="l-link">Go home</a></li>
+				<li><a data-route-name="homeJump1" href="/#jump1" id="UID23_" is="l-link">Go homeJump1</a></li>
+				<li><a data-route-name="homeJump2" href="/#jump2" id="UID24_" is="l-link">Go homeJump2</a></li>
+				<li><a data-route-name="ssgNo" href="/ssg/no/" id="UID25_" is="l-link">Go ssgNo</a></li>
+				<li><a data-route-name="ssgYes" href="/ssg/yes/" id="UID26_" is="l-link">Go ssgYes</a></li>
+				<li><a data-route-name="ssgYesJump1" href="/ssg/yes/#jump1" id="UID27_" is="l-link">Go ssgYesJump1</a></li>
+				<li><a data-route-name="ssgYesJump2" href="/ssg/yes/#jump2" id="UID28_" is="l-link">Go ssgYesJump2</a></li>
 			</ul>
 		</nav>
-		<main>
-			<h1>Hello world!</h1>
-			<div id="UID13_" is="l-transitiontest"></div>
-			<div id="jump1">Jump 1</div>
-			<ol id="mylist" is="l-list">
-				<li>
-					<div id="mylist-0" is="l-listitem"> mylist-0 <button type="button">↑</button> <button type="button">↓</button> <button type="button">Add before</button> <button type="button">Remove</button>
-						<div id="UID14_" is="l-textbox"> <input maxlength="10" oninput="this.closest(`[is='l-textbox']`).instance.handleInput(event,)" placeholder="Type here" type="text" value="hello"> <span>5 / 10 Remaining</span> </div>
-					</div>
-				</li>
-			</ol>
-			<h1>Headline 1</h1>
-			<h2>This is a variable</h2>
-			<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
-			<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
-			<p><a href="/ssg/yes/" id="UID15_" is="l-link">Link to SSG Yes</a></p><button type="button" onclick="this.closest(`[is='l-indexpage']`).instance.anchorlessRoute(event,)">Go to SSG Yes</button>
-			<h2>Headline 2</h2>
-			<blockquote>
-				<p>Excepteur sint occaecat <em>cupidatat</em> non proident.</p>
-			</blockquote>
-			<p>Joseph's coat was red and yellow and green and brown and scarlet.</p>
-			<ul>
-				<li> ut aliquip ex</li>
-				<li> ea commodo consequat.<ul>
-						<li> Duis aute</li>
-						<li> irure dolor in</li>
-					</ul>
-				</li>
-				<li> ut aliquip ex</li>
-			</ul>
-			<ol>
-				<li> ut aliquip ex</li>
-				<li> ea commodo consequat.<ol>
-						<li> Duis aute</li>
-						<li> irure dolor in</li>
-					</ol>
-				</li>
-				<li> ut aliquip ex</li>
-			</ol>
-			<div id="jump2">Jump 2</div>
-		</main>
-		<div id="modals" is="l-modalcontainer"></div>
-	</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={UID12_:{message:'This is a variable',title:'Home page'},mylist:[{value:'hello'}],'mylist-0':'hello',UID14_:{maxlength:10,value:'hello'}}"></script>
+		<h1>Hello world!</h1>
+		<div id="UID14_" is="l-transitiontest"></div><button onclick="El.IndexPage.get('UID13_').openModal(event)" type="button">Modal</button>
+		<div id="jump1">Jump 1</div>
+		<ol id="UID15_" is="l-list">
+			<li id="UID16_" is="l-listitem" data-value="hello"> UID16_ <button type="button">↑</button> <button type="button">↓</button> <button type="button">Add before</button>
+				<div data-maxlength="10" id="UID17_" is="l-textbox" data-value="hello"><input maxlength="10" oninput="El.Textbox.get('UID17_').handleInput(event)" placeholder="Type here" type="text" value="hello"><span>5 / 10 Remaining</span> </div> <button type="button">Remove</button>
+			</li>
+		</ol>
+		<h1>Headline 1</h1>
+		<h2>This is a variable</h2>
+		<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
+		<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
+		<p><a data-route-name="ssgYes" href="/ssg/yes/" id="UID18_" is="l-link">Link to SSG Yes</a></p><button type="button" onclick="this.closest(IndexPage).anchorlessRoute()">Go to SSG Yes</button>
+		<h2>Headline 2</h2>
+		<blockquote>
+			<p>Excepteur sint occaecat <em>cupidatat</em> non proident.</p>
+		</blockquote>
+		<p>Joseph's coat was red and yellow and green and brown and scarlet.</p>
+		<ul>
+			<li> ut aliquip ex</li>
+			<li> ea commodo consequat.<ul>
+					<li> Duis aute</li>
+					<li> irure dolor in</li>
+				</ul>
+			</li>
+			<li> ut aliquip ex</li>
+		</ul>
+		<ol>
+			<li> ut aliquip ex</li>
+			<li> ea commodo consequat.<ol>
+					<li> Duis aute</li>
+					<li> irure dolor in</li>
+				</ol>
+			</li>
+			<li> ut aliquip ex</li>
+		</ol>
+		<div id="jump2">Jump 2</div>
+		<div data-duration="0.2" id="UID29_" is="l-modalcontainer" data-transition-state="inactive"></div>
+	</main>
 </body>
 
 </html>
