--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -4,38 +4,32 @@
 <head>
 	<title>SSG yes</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1702876511072" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1702876511072">
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1703610557542" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1703610557542"> <script type="module">import { YesSSGPage } from '/ssg-yes-TIM5JTR5.js';YesSSGPage.init();</script>
 	<style data-style="l-yesssgpage"></style>
-	<style data-style="l-nav"></style>
-	<style data-style="l-link"></style>
-	<style data-style="l-modalcontainer"></style>
-	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1702876511072">
+	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1703610557542">
 </head>
 
 <body>
-	<div id="UID26_" is="l-yesssgpage">
-		<nav id="nav" is="l-nav">
+	<main data-page-title="SSG yes" id="UID31_" is="l-yesssgpage">
+		<nav id="UID32_" is="l-nav">
 			<ul>
-				<li><a href="/404.html" id="UID27_" is="l-link">Go error404</a></li>
-				<li><a href="https://example.com/" rel="noopener" target="_blank" id="UID28_" is="l-link">Go external</a></li>
-				<li><a href="/" id="UID29_" is="l-link">Go home</a></li>
-				<li><a href="/#jump1" id="UID30_" is="l-link">Go homeJump1</a></li>
-				<li><a href="/#jump2" id="UID31_" is="l-link">Go homeJump2</a></li>
-				<li><a href="/ssg/no/" id="UID32_" is="l-link">Go ssgNo</a></li>
-				<li><a href="/ssg/yes/" id="UID33_" is="l-link">Go ssgYes</a></li>
-				<li><a href="/ssg/yes/#jump1" id="UID34_" is="l-link">Go ssgYesJump1</a></li>
-				<li><a href="/ssg/yes/#jump2" id="UID35_" is="l-link">Go ssgYesJump2</a></li>
-				<li> <button onclick="this.closest(`[is='l-nav']`).instance.openModal(event,)" type="button">Modal</button> </li>
+				<li><a data-route-name="error404" href="/404.html" id="UID33_" is="l-link">Go error404</a></li>
+				<li><a data-route-name="external" href="https://example.com/" rel="noopener" target="_blank" id="UID34_" is="l-link">Go external</a></li>
+				<li><a data-route-name="home" href="/" id="UID35_" is="l-link">Go home</a></li>
+				<li><a data-route-name="homeJump1" href="/#jump1" id="UID36_" is="l-link">Go homeJump1</a></li>
+				<li><a data-route-name="homeJump2" href="/#jump2" id="UID37_" is="l-link">Go homeJump2</a></li>
+				<li><a data-route-name="ssgNo" href="/ssg/no/" id="UID38_" is="l-link">Go ssgNo</a></li>
+				<li><a data-route-name="ssgYes" href="/ssg/yes/" id="UID39_" is="l-link">Go ssgYes</a></li>
+				<li><a data-route-name="ssgYesJump1" href="/ssg/yes/#jump1" id="UID40_" is="l-link">Go ssgYesJump1</a></li>
+				<li><a data-route-name="ssgYesJump2" href="/ssg/yes/#jump2" id="UID41_" is="l-link">Go ssgYesJump2</a></li>
 			</ul>
 		</nav>
-		<main>
-			<h1>SSG yes</h1>
-			<div id="jump1">Jump 1</div>
-			<div id="jump2">Jump 2</div>
-		</main>
-		<div id="modals" is="l-modalcontainer"></div>
-	</div><script id="unhydratedArgs" src="data:text/javascript," onload="unhydratedArgs={UID26_:{title:'SSG yes'}}"></script>
+		<h1>SSG yes</h1>
+		<div id="jump1">Jump 1</div>
+		<div id="jump2">Jump 2</div>
+		<div data-duration="0.2" id="UID42_" is="l-modalcontainer" data-transition-state="inactive"></div>
+	</main>
 </body>
 
 </html>
