--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -4,8 +4,8 @@
 <head>
 	<title>Home page</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1703737253170" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1703737253170"> <script type="module">import { IndexPage } from '/pages-XXUM4Y22.js';IndexPage.init();</script>
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1703788383359" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1703788383359"> <script type="module">import { IndexPage } from '/pages-LRIWCL3H.js';IndexPage.init();</script>
 	<style data-style="l-textbox"></style>
 	<style data-style="l-listitem"></style>
 	<style data-style="l-list"></style>
@@ -13,30 +13,34 @@
 	<style data-style="l-progressmodal"></style>
 	<style data-style="l-transitiontest"></style>
 	<style data-style="l-indexpage"></style>
-	<link rel="stylesheet" href="/index.html.css?cache=1703737253170">
+	<link rel="stylesheet" href="/index.html.css?cache=1703788383359">
 </head>
 
 <body>
-	<main data-message="This is a variable" data-page-title="Home page" id="UID13_" is="l-indexpage">
-		<nav id="UID19_" is="l-nav">
+	<main id="UID14_" is="l-indexpage" data-message="This is a variable" data-page-title="Home page">
+		<nav id="UID18_" is="l-nav">
 			<ul>
-				<li><a data-route-name="error404" href="/404.html" id="UID20_" is="l-link">Go error404</a></li>
-				<li><a data-route-name="external" href="https://example.com/" rel="noopener" target="_blank" id="UID21_" is="l-link">Go external</a></li>
-				<li><a data-route-name="home" href="/" id="UID22_" is="l-link">Go home</a></li>
-				<li><a data-route-name="homeJump1" href="/#jump1" id="UID23_" is="l-link">Go homeJump1</a></li>
-				<li><a data-route-name="homeJump2" href="/#jump2" id="UID24_" is="l-link">Go homeJump2</a></li>
-				<li><a data-route-name="ssgNo" href="/ssg/no/" id="UID25_" is="l-link">Go ssgNo</a></li>
-				<li><a data-route-name="ssgYes" href="/ssg/yes/" id="UID26_" is="l-link">Go ssgYes</a></li>
-				<li><a data-route-name="ssgYesJump1" href="/ssg/yes/#jump1" id="UID27_" is="l-link">Go ssgYesJump1</a></li>
-				<li><a data-route-name="ssgYesJump2" href="/ssg/yes/#jump2" id="UID28_" is="l-link">Go ssgYesJump2</a></li>
+				<li><a id="UID20_" is="l-link" data-route-name="error404" href="/404.html">Go error404</a></li>
+				<li><a id="UID21_" is="l-link" data-route-name="external" href="https://example.com/" rel="noopener" target="_blank">Go external</a></li>
+				<li><a id="UID22_" is="l-link" data-route-name="home" href="/">Go home</a></li>
+				<li><a id="UID23_" is="l-link" data-route-name="homeJump1" href="/#jump1">Go homeJump1</a></li>
+				<li><a id="UID24_" is="l-link" data-route-name="homeJump2" href="/#jump2">Go homeJump2</a></li>
+				<li><a id="UID25_" is="l-link" data-route-name="ssgNo" href="/ssg/no/">Go ssgNo</a></li>
+				<li><a id="UID26_" is="l-link" data-route-name="ssgYes" href="/ssg/yes/">Go ssgYes</a></li>
+				<li><a id="UID27_" is="l-link" data-route-name="ssgYesJump1" href="/ssg/yes/#jump1">Go ssgYesJump1</a></li>
+				<li><a id="UID28_" is="l-link" data-route-name="ssgYesJump2" href="/ssg/yes/#jump2">Go ssgYesJump2</a></li>
 			</ul>
 		</nav>
 		<h1>Hello world!</h1>
-		<div id="UID14_" is="l-transitiontest"></div><button onclick="this.closest(`[is='l-indexpage']`).openModal(event)" type="button">Modal</button>
+		<div id="UID15_" is="l-transitiontest"></div><button onclick="this.closest(`[is='l-indexpage']`).openModal(event)" type="button">Modal</button>
 		<div id="jump1">Jump 1</div>
-		<ol id="UID15_" is="l-list">
-			<li id="UID16_" is="l-listitem" data-value="hello"> UID16_ <button type="button">↑</button> <button type="button">↓</button> <button type="button">Add before</button>
-				<div data-maxlength="10" id="UID17_" is="l-textbox" data-value="hello"><input maxlength="10" oninput="this.closest(`[is='l-textbox']`).handleInput(event)" placeholder="Type here" type="text" value="hello"><span>5 / 10 Remaining</span> </div> <button type="button">Remove</button>
+		<ol id="UID16_" is="l-list">
+			<li>List ID UID16_</li>
+			<li id="UID13_" is="l-listitem" data-value="hello">
+				<p>List item ID UID13_</p> <button type="button">↑</button> <button type="button">↓</button> <button type="button">Add before</button>
+				<div id="UID13_-txt" is="l-textbox" data-maxlength="10" data-value="hello"><input maxlength="10" oninput="this.closest(`[is='l-textbox']`).handleInput(event)" placeholder="Type here" type="text" value="hello"><span></span>
+					<p>textbox ID UID13_-txt</p>
+				</div> <button type="button">Remove</button>
 			</li>
 			<li> <button onclick="this.closest(`[is='l-list']`).onAdd(event)" type="button">Add</button></li>
 		</ol>
@@ -44,7 +48,7 @@
 		<h2>This is a variable</h2>
 		<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
 		<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
-		<p><a data-route-name="ssgYes" href="/ssg/yes/" id="UID18_" is="l-link">Link to SSG Yes</a></p><button type="button" onclick="this.closest(`[is='l-indexpage']`).anchorlessRoute(event)">Go to SSG Yes</button>
+		<p><a id="UID17_" is="l-link" data-route-name="ssgYes" href="/ssg/yes/">Link to SSG Yes</a></p><button type="button" onclick="this.closest(`[is='l-indexpage']`).anchorlessRoute(event)">Go to SSG Yes</button>
 		<h2>Headline 2</h2>
 		<blockquote>
 			<p>Excepteur sint occaecat <em>cupidatat</em> non proident.</p>
@@ -69,7 +73,7 @@
 			<li> ut aliquip ex</li>
 		</ol>
 		<div id="jump2">Jump 2</div>
-		<div data-duration="0.2" id="UID29_" is="l-modalcontainer" data-transition-state="inactive"></div>
+		<div id="UID19_" is="l-modalcontainer" data-duration="0.2" data-transition-state="inactive"></div>
 	</main>
 </body>
 
