Update tests and dependencies

--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -4,32 +4,28 @@
 <head>
 	<title>Error 404</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1703788383359" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1703788383359"> <script type="module">import { ErrorPage } from '/error-FTX6DJQR.js';ErrorPage.init();</script>
-	<style data-style="l-modalcontainer"></style>
-	<style data-style="l-link"></style>
-	<style data-style="l-nav"></style>
-	<style data-style="l-errorpage"></style>
-	<link rel="stylesheet" href="/?cache=1703788383359">
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1704473732305" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1704473732305"> <script type="module">import { ErrorPage } from '/error-VMBPXWT3.js';</script>
+	<link rel="stylesheet" href="/?cache=1704473732305">
 </head>
 
 <body>
-	<main id="UID1_" is="l-errorpage" data-page-title="Error 404">
-		<nav id="UID2_" is="l-nav">
+	<main id="UID2_" is="l-errorpage" data-page-title="Error 404">
+		<nav>
 			<ul>
-				<li><a id="UID4_" is="l-link" data-route-name="error404" href="/404.html">Go error404</a></li>
-				<li><a id="UID5_" is="l-link" data-route-name="external" href="https://example.com/" rel="noopener" target="_blank">Go external</a></li>
-				<li><a id="UID6_" is="l-link" data-route-name="home" href="/">Go home</a></li>
-				<li><a id="UID7_" is="l-link" data-route-name="homeJump1" href="/#jump1">Go homeJump1</a></li>
-				<li><a id="UID8_" is="l-link" data-route-name="homeJump2" href="/#jump2">Go homeJump2</a></li>
-				<li><a id="UID9_" is="l-link" data-route-name="ssgNo" href="/ssg/no/">Go ssgNo</a></li>
-				<li><a id="UID10_" is="l-link" data-route-name="ssgYes" href="/ssg/yes/">Go ssgYes</a></li>
-				<li><a id="UID11_" is="l-link" data-route-name="ssgYesJump1" href="/ssg/yes/#jump1">Go ssgYesJump1</a></li>
-				<li><a id="UID12_" is="l-link" data-route-name="ssgYesJump2" href="/ssg/yes/#jump2">Go ssgYesJump2</a></li>
+				<li> <a href="/404.html">Go error404</a></li>
+				<li> <a href="https://example.com/" rel="noopener" target="_blank">Go external</a></li>
+				<li> <a href="/">Go home</a></li>
+				<li> <a href="/#jump1">Go homeJump1</a></li>
+				<li> <a href="/#jump2">Go homeJump2</a></li>
+				<li> <a href="/ssg/no/">Go ssgNo</a></li>
+				<li> <a href="/ssg/yes/">Go ssgYes</a></li>
+				<li> <a href="/ssg/yes/#jump1">Go ssgYesJump1</a></li>
+				<li> <a href="/ssg/yes/#jump2">Go ssgYesJump2</a></li>
 			</ul>
 		</nav>
 		<h1>404 page :(</h1>
-		<div id="UID3_" is="l-modalcontainer" data-duration="0.2" data-transition-state="inactive"></div>
+		<div id="UID1_" is="l-modalcontainer" data-duration="0.2" data-transition-state="inactive"></div>
 	</main>
 </body>
 
