--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -4,31 +4,31 @@
 <head>
 	<title>SSG yes</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1703788383359" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1703788383359"> <script type="module">import { YesSSGPage } from '/ssg-yes-CUIAFU6U.js';YesSSGPage.init();</script>
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1704474142416" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1704474142416"> <script type="module">import { YesSSGPage } from '/ssg-yes-W5NXGWLL.js';</script>
 	<style data-style="l-yesssgpage"></style>
-	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1703788383359">
+	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1704474142416">
 </head>
 
 <body>
-	<main id="UID30_" is="l-yesssgpage" data-page-title="SSG yes">
-		<nav id="UID31_" is="l-nav">
+	<main id="UID9_" is="l-yesssgpage" data-page-title="SSG yes">
+		<nav>
 			<ul>
-				<li><a id="UID33_" is="l-link" data-route-name="error404" href="/404.html">Go error404</a></li>
-				<li><a id="UID34_" is="l-link" data-route-name="external" href="https://example.com/" rel="noopener" target="_blank">Go external</a></li>
-				<li><a id="UID35_" is="l-link" data-route-name="home" href="/">Go home</a></li>
-				<li><a id="UID36_" is="l-link" data-route-name="homeJump1" href="/#jump1">Go homeJump1</a></li>
-				<li><a id="UID37_" is="l-link" data-route-name="homeJump2" href="/#jump2">Go homeJump2</a></li>
-				<li><a id="UID38_" is="l-link" data-route-name="ssgNo" href="/ssg/no/">Go ssgNo</a></li>
-				<li><a id="UID39_" is="l-link" data-route-name="ssgYes" href="/ssg/yes/">Go ssgYes</a></li>
-				<li><a id="UID40_" is="l-link" data-route-name="ssgYesJump1" href="/ssg/yes/#jump1">Go ssgYesJump1</a></li>
-				<li><a id="UID41_" is="l-link" data-route-name="ssgYesJump2" href="/ssg/yes/#jump2">Go ssgYesJump2</a></li>
+				<li> <a href="/404.html">Go error404</a></li>
+				<li> <a href="https://example.com/" rel="noopener" target="_blank">Go external</a></li>
+				<li> <a href="/">Go home</a></li>
+				<li> <a href="/#jump1">Go homeJump1</a></li>
+				<li> <a href="/#jump2">Go homeJump2</a></li>
+				<li> <a href="/ssg/no/">Go ssgNo</a></li>
+				<li> <a href="/ssg/yes/">Go ssgYes</a></li>
+				<li> <a href="/ssg/yes/#jump1">Go ssgYesJump1</a></li>
+				<li> <a href="/ssg/yes/#jump2">Go ssgYesJump2</a></li>
 			</ul>
 		</nav>
 		<h1>SSG yes</h1>
 		<div id="jump1">Jump 1</div>
 		<div id="jump2">Jump 2</div>
-		<div id="UID32_" is="l-modalcontainer" data-duration="0.2" data-transition-state="inactive"></div>
+		<div id="UID1_" is="l-modalcontainer" data-duration="0.2" data-transition-state="inactive"></div>
 	</main>
 </body>
 
