Change routeNames back to array

--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -4,24 +4,24 @@
 <head>
 	<title>Error 404</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1704473732305" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1704473732305"> <script type="module">import { ErrorPage } from '/error-VMBPXWT3.js';</script>
-	<link rel="stylesheet" href="/?cache=1704473732305">
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1704576075760" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1704576075760"> <script type="module">import { ErrorPage } from '/error-UEDA4MKX.js';</script>
+	<link rel="stylesheet" href="/?cache=1704576075760">
 </head>
 
 <body>
 	<main id="UID2_" is="l-errorpage" data-page-title="Error 404">
 		<nav>
 			<ul>
-				<li> <a href="/404.html">Go error404</a></li>
-				<li> <a href="https://example.com/" rel="noopener" target="_blank">Go external</a></li>
-				<li> <a href="/">Go home</a></li>
-				<li> <a href="/#jump1">Go homeJump1</a></li>
-				<li> <a href="/#jump2">Go homeJump2</a></li>
-				<li> <a href="/ssg/no/">Go ssgNo</a></li>
-				<li> <a href="/ssg/yes/">Go ssgYes</a></li>
-				<li> <a href="/ssg/yes/#jump1">Go ssgYesJump1</a></li>
-				<li> <a href="/ssg/yes/#jump2">Go ssgYesJump2</a></li>
+				<li><a href="/404.html">Go error404</a></li>
+				<li><a href="https://example.com/" rel="noopener" target="_blank">Go external</a></li>
+				<li><a href="/">Go home</a></li>
+				<li><a href="/#jump1">Go homeJump1</a></li>
+				<li><a href="/#jump2">Go homeJump2</a></li>
+				<li><a href="/ssg/no/">Go ssgNo</a></li>
+				<li><a href="/ssg/yes/">Go ssgYes</a></li>
+				<li><a href="/ssg/yes/#jump1">Go ssgYesJump1</a></li>
+				<li><a href="/ssg/yes/#jump2">Go ssgYesJump2</a></li>
 			</ul>
 		</nav>
 		<h1>404 page :(</h1>
