--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -4,28 +4,28 @@
 <head>
 	<title>Home page</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1704473732305" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1704473732305"> <script type="module">import { IndexPage } from '/pages-C37NORY4.js';</script>
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1704576075760" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1704576075760"> <script type="module">import { IndexPage } from '/pages-4Z55BPEG.js';</script>
 	<style data-style="l-textbox"></style>
 	<style data-style="l-progressmodal"></style>
 	<style data-style="l-transitiontest"></style>
 	<style data-style="l-indexpage"></style>
-	<link rel="stylesheet" href="/index.html.css?cache=1704473732305">
+	<link rel="stylesheet" href="/index.html.css?cache=1704576075760">
 </head>
 
 <body>
 	<main id="UID5_" is="l-indexpage" data-page-title="Home page" data-message="This is a variable">
 		<nav>
 			<ul>
-				<li> <a href="/404.html">Go error404</a></li>
-				<li> <a href="https://example.com/" rel="noopener" target="_blank">Go external</a></li>
-				<li> <a href="/">Go home</a></li>
-				<li> <a href="/#jump1">Go homeJump1</a></li>
-				<li> <a href="/#jump2">Go homeJump2</a></li>
-				<li> <a href="/ssg/no/">Go ssgNo</a></li>
-				<li> <a href="/ssg/yes/">Go ssgYes</a></li>
-				<li> <a href="/ssg/yes/#jump1">Go ssgYesJump1</a></li>
-				<li> <a href="/ssg/yes/#jump2">Go ssgYesJump2</a></li>
+				<li><a href="/404.html">Go error404</a></li>
+				<li><a href="https://example.com/" rel="noopener" target="_blank">Go external</a></li>
+				<li><a href="/">Go home</a></li>
+				<li><a href="/#jump1">Go homeJump1</a></li>
+				<li><a href="/#jump2">Go homeJump2</a></li>
+				<li><a href="/ssg/no/">Go ssgNo</a></li>
+				<li><a href="/ssg/yes/">Go ssgYes</a></li>
+				<li><a href="/ssg/yes/#jump1">Go ssgYesJump1</a></li>
+				<li><a href="/ssg/yes/#jump2">Go ssgYesJump2</a></li>
 			</ul>
 		</nav>
 		<h1>Hello world!</h1>
@@ -51,7 +51,7 @@
 		<h2>This is a variable</h2>
 		<p>Lorem ipsum dolor <strong>sit amet</strong>, consectetur <em>adipiscing elit</em>, sed do <em>eiusmod tempor</em> incididunt.</p>
 		<p>Duis aute voluptate <a href="https://example.com">velit esse cillum</a> dolore /eu fugiat/ nulla pariatur.</p>
-		<p> <a href="/ssg/yes/">Link to SSG Yes</a></p><button onclick="this.closest(`[is='l-indexpage']`).anchorlessRoute(event)" type="button">Go to SSG Yes</button>
+		<p><a href="/ssg/yes/">Link to SSG Yes</a></p><button onclick="this.closest(`[is='l-indexpage']`).anchorlessRoute(event)" type="button">Go to SSG Yes</button>
 		<h2>Headline 2</h2>
 		<blockquote>
 			<p>Excepteur sint occaecat <em>cupidatat</em> non proident.</p>
