--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -4,25 +4,25 @@
 <head>
 	<title>SSG yes</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1704474142416" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1704474142416"> <script type="module">import { YesSSGPage } from '/ssg-yes-W5NXGWLL.js';</script>
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1704576075760" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1704576075760"> <script type="module">import { YesSSGPage } from '/ssg-yes-Q3GDHOGW.js';</script>
 	<style data-style="l-yesssgpage"></style>
-	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1704474142416">
+	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1704576075760">
 </head>
 
 <body>
 	<main id="UID9_" is="l-yesssgpage" data-page-title="SSG yes">
 		<nav>
 			<ul>
-				<li> <a href="/404.html">Go error404</a></li>
-				<li> <a href="https://example.com/" rel="noopener" target="_blank">Go external</a></li>
-				<li> <a href="/">Go home</a></li>
-				<li> <a href="/#jump1">Go homeJump1</a></li>
-				<li> <a href="/#jump2">Go homeJump2</a></li>
-				<li> <a href="/ssg/no/">Go ssgNo</a></li>
-				<li> <a href="/ssg/yes/">Go ssgYes</a></li>
-				<li> <a href="/ssg/yes/#jump1">Go ssgYesJump1</a></li>
-				<li> <a href="/ssg/yes/#jump2">Go ssgYesJump2</a></li>
+				<li><a href="/404.html">Go error404</a></li>
+				<li><a href="https://example.com/" rel="noopener" target="_blank">Go external</a></li>
+				<li><a href="/">Go home</a></li>
+				<li><a href="/#jump1">Go homeJump1</a></li>
+				<li><a href="/#jump2">Go homeJump2</a></li>
+				<li><a href="/ssg/no/">Go ssgNo</a></li>
+				<li><a href="/ssg/yes/">Go ssgYes</a></li>
+				<li><a href="/ssg/yes/#jump1">Go ssgYesJump1</a></li>
+				<li><a href="/ssg/yes/#jump2">Go ssgYesJump2</a></li>
 			</ul>
 		</nav>
 		<h1>SSG yes</h1>
