Sorta fixing tests

--- a/example/dist-golden/404.html
+++ b/example/dist-golden/404.html
@@ -4,13 +4,13 @@
 <head>
 	<title>Error 404</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1704576075760" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1704576075760"> <script type="module">import { ErrorPage } from '/error-UEDA4MKX.js';</script>
-	<link rel="stylesheet" href="/?cache=1704576075760">
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1704708692293" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1704708692293"> <script type="module">import { ErrorPage } from '/error-DFJPYWWE.js';</script>
+	<link rel="stylesheet" href="/?cache=1704708692293">
 </head>
 
 <body>
-	<main id="UID2_" is="l-errorpage" data-page-title="Error 404">
+	<main is="l-errorpage" data-page-title="Error 404">
 		<nav>
 			<ul>
 				<li><a href="/404.html">Go error404</a></li>
@@ -25,7 +25,7 @@
 			</ul>
 		</nav>
 		<h1>404 page :(</h1>
-		<div id="UID1_" is="l-modalcontainer" data-duration="0.2" data-transition-state="inactive"></div>
+		<div is="l-modalcontainer" data-duration="0.2" data-transition-state="inactive" id="modals"></div>
 	</main>
 </body>
 
