--- a/example/dist-golden/ssg/yes/index.html
+++ b/example/dist-golden/ssg/yes/index.html
@@ -4,14 +4,14 @@
 <head>
 	<title>SSG yes</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1704576075760" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1704576075760"> <script type="module">import { YesSSGPage } from '/ssg-yes-Q3GDHOGW.js';</script>
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1704708692293" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1704708692293"> <script type="module">import { YesSSGPage } from '/ssg-yes-IDZQPXOV.js';</script>
 	<style data-style="l-yesssgpage"></style>
-	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1704576075760">
+	<link rel="stylesheet" href="/ssg/yes/index.html.css?cache=1704708692293">
 </head>
 
 <body>
-	<main id="UID9_" is="l-yesssgpage" data-page-title="SSG yes">
+	<main is="l-yesssgpage" data-page-title="SSG yes">
 		<nav>
 			<ul>
 				<li><a href="/404.html">Go error404</a></li>
@@ -28,7 +28,7 @@
 		<h1>SSG yes</h1>
 		<div id="jump1">Jump 1</div>
 		<div id="jump2">Jump 2</div>
-		<div id="UID1_" is="l-modalcontainer" data-duration="0.2" data-transition-state="inactive"></div>
+		<div is="l-modalcontainer" data-duration="0.2" data-transition-state="inactive" id="modals"></div>
 	</main>
 </body>
 
