--- a/example/dist-golden/index.html
+++ b/example/dist-golden/index.html
@@ -4,17 +4,17 @@
 <head>
 	<title>Home page</title>
 	<base href="/">
-	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1704576075760" type="module"></script>
-	<link rel="stylesheet" href="/styles.css?cache=1704576075760"> <script type="module">import { IndexPage } from '/pages-4Z55BPEG.js';</script>
+	<meta name="viewport" content="width=device-width, initial-scale=1"> <script src="/script.js?cache=1704708692293" type="module"></script>
+	<link rel="stylesheet" href="/styles.css?cache=1704708692293"> <script type="module">import { IndexPage } from '/pages-CQL6HAZP.js';</script>
 	<style data-style="l-textbox"></style>
 	<style data-style="l-progressmodal"></style>
 	<style data-style="l-transitiontest"></style>
 	<style data-style="l-indexpage"></style>
-	<link rel="stylesheet" href="/index.html.css?cache=1704576075760">
+	<link rel="stylesheet" href="/index.html.css?cache=1704708692293">
 </head>
 
 <body>
-	<main id="UID5_" is="l-indexpage" data-page-title="Home page" data-message="This is a variable">
+	<main is="l-indexpage" data-page-title="Home page" data-message="This is a variable">
 		<nav>
 			<ul>
 				<li><a href="/404.html">Go error404</a></li>
@@ -29,23 +29,23 @@
 			</ul>
 		</nav>
 		<h1>Hello world!</h1>
-		<div id="UID6_" is="l-transitiontest"></div><button onclick="this.closest(`[is='l-indexpage']`).openModal(event)" type="button">Modal</button>
+		<div is="l-transitiontest"></div><button onclick="this.closest(`[is='l-indexpage']`).openModal(event)" type="button">Modal</button>
 		<div id="jump1">Jump 1</div>
-		<ol id="UID7_" is="l-list">
-			<li>List ID UID7_</li> <!--items-->
-			<li id="UID3_" is="l-listitem" data-value="hello" data-dynamic-list="items">
-				<p>List item ID UID3_</p>
-				<div id="UID3_-txt" is="l-textbox" data-max="10" data-value="hello"><input data-dynamic-attrs="class" class="warning" id="UID3_-txt-input" maxlength="10" oninput="this.closest(`[is='l-textbox']`).emitValue(event)" placeholder="Type here" type="text" value="hello"><span data-dynamic-content="" id="UID3_-txt-remaining"> 5 / 10 Remaining</span>
-					<p>textbox ID UID3_-txt</p>
-				</div> <button onclick="this.closest(`[is='l-listitem']`).emitDelete(event)" type="button">Remove</button>
+		<ol is="l-list" id="indexList">
+			<li>List ID indexList</li>
+			<li is="l-listitem" id="indexList-0" data-value="hello">
+				<p>List item ID indexList-0</p>
+				<div is="l-textbox" data-max="10" data-value="hello" id="indexList-0-text"> <input class="warning" maxlength="10" oninput="this.closest(`[is='l-textbox']`).onInput(event)" placeholder="Type here" type="text" value="hello"> <span id="indexList-0-text-remaining"> 5 / 10 Remaining </span>
+					<p>textbox ID indexList-0-text</p>
+				</div> <button onclick="this.closest(`[is='l-listitem']`).onDelete(event)" type="button">Remove</button>
 			</li>
-			<li id="UID4_" is="l-listitem" data-value="world" data-dynamic-list="items">
-				<p>List item ID UID4_</p>
-				<div id="UID4_-txt" is="l-textbox" data-max="10" data-value="world"><input data-dynamic-attrs="class" class="warning" id="UID4_-txt-input" maxlength="10" oninput="this.closest(`[is='l-textbox']`).emitValue(event)" placeholder="Type here" type="text" value="world"><span data-dynamic-content="" id="UID4_-txt-remaining"> 5 / 10 Remaining</span>
-					<p>textbox ID UID4_-txt</p>
-				</div> <button onclick="this.closest(`[is='l-listitem']`).emitDelete(event)" type="button">Remove</button>
+			<li is="l-listitem" id="indexList-1" data-value="world">
+				<p>List item ID indexList-1</p>
+				<div is="l-textbox" data-max="10" data-value="world" id="indexList-1-text"> <input class="warning" maxlength="10" oninput="this.closest(`[is='l-textbox']`).onInput(event)" placeholder="Type here" type="text" value="world"> <span id="indexList-1-text-remaining"> 5 / 10 Remaining </span>
+					<p>textbox ID indexList-1-text</p>
+				</div> <button onclick="this.closest(`[is='l-listitem']`).onDelete(event)" type="button">Remove</button>
 			</li>
-			<li> <button onclick="this.closest(`[is='l-list']`).emitAdd(event)" type="button">Add</button> </li>
+			<li> <button onclick="this.closest(`[is='l-list']`).onAdd(event)" type="button">Add</button> </li>
 		</ol>
 		<h1>Headline 1</h1>
 		<h2>This is a variable</h2>
@@ -76,7 +76,7 @@
 			<li> ut aliquip ex</li>
 		</ol>
 		<div id="jump2">Jump 2</div>
-		<div id="UID1_" is="l-modalcontainer" data-duration="0.2" data-transition-state="inactive"></div>
+		<div is="l-modalcontainer" data-duration="0.2" data-transition-state="inactive" id="modals"></div>
 	</main>
 </body>
 
